<resources>
    <string name="app_name">Trip_Planner_app</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="trip_to_dubai">Trip to Dubai</string>
    <string name="to_dubai">To: Dubai</string>
    <string name="date_02_12_2025">Date: 02/12/2025</string>
    <string name="type_family">Type: Family</string>
    <string name="search_trips">Search trips...</string>
    <string name="add_trip">Add Trip</string>
    <string name="trip_title">TRIP TITLE</string>
    <string name="my_trip_title">My Trip Title</string>
    <string name="where_to">WHERE TO</string>
    <string name="palestine">Palestine</string>
    <string name="date_of_travel">DATE OF TRAVEL</string>
    <string name="select_date">Select date</string>
    <string name="leisure">Leisure</string>
    <string name="business">Business</string>
    <string name="trip_of_type">Trip of Type</string>
    <string name="length_of_stay">LENGTH OF STAY</string>
    <string name="_5">5</string>
    <string name="select_activities">Select Activities</string>
    <string name="save">Save</string>
    <string name="swimming">Swimming</string>
    <string name="my_trips">My Trips</string>
    <string name="activities">Activities</string>
    <string name="hiking">Hiking</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="running">Running</string>
    <string name="snow_sport">Snow Sport</string>
    <string name="work">Work</string>
    <string name="snow_sports">Snow Sports</string>
    <string name="working">Working</string>
    <string name="camping">Camping</string>
    <string name="gym">Gym</string>
    <string name="photography">Photography</string>
    <string name="international">International</string>
    <string name="beach">Beach</string>
    <string name="baby">Baby</string>
    <string name="bicycling">Bicycling</string>
    <string name="fancy_dinner">Fancy Dinner</string>
    <string name="select_time">Select time</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="notes_about_this_activity">Notes about this activity</string>
    <string name="save_activity_details">Save Activity Details</string>
    <string name="select_time_of_day">Select Time of Day</string>
    <string name="trip">Trip</string>
</resources>