<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F7F3"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_back"
            app:tint="#2E6D66"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activities"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="#2E6D66"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtActivityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="Swimming"
            android:gravity="center"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_of_travel"
            android:textStyle="bold"
            android:textColor="#9E9E9E"
            android:textSize="14sp"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:id="@+id/SelectDatelayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#FFFFFF"
            android:paddingHorizontal="12dp"
            android:gravity="center_vertical"
            android:elevation="1dp">

            <TextView
                android:id="@+id/txtSelectedDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_date"
                android:textColor="#3C4A43"
                android:textSize="16sp"
                />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@android:drawable/ic_menu_my_calendar"
                app:tint="#3C4A43" />

        </LinearLayout>


        <TextView
            android:id="@+id/txtTimeAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_time_of_day"
            android:textStyle="bold"
            android:textColor="#9E9E9E"
            android:textSize="14sp"
            android:layout_marginTop="16dp" />

        <RadioGroup
            android:id="@+id/rgPeriodOfDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:backgroundTint="@color/white"
            >

            <RadioButton
                android:id="@+id/rdBtnMorning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morning"/>

            <RadioButton
                android:id="@+id/rdBtnAfternoon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/afternoon"/>

            <RadioButton
                android:id="@+id/rdBtnEvening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evening"/>
        </RadioGroup>

        <EditText
            android:id="@+id/edtNotes"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/notes_about_this_activity"
            android:gravity="top"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnSaveActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_activity_details"
            android:backgroundTint="#2196F3"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>