<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="40dp"
    android:layout_gravity="center"
    android:padding="24dp"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/trip_planning_logo"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:contentDescription="Logo" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp" />

    <CheckBox
        android:id="@+id/chk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/remember_me"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/login"
        app:rippleColor="#3F51B5" />

</androidx.appcompat.widget.LinearLayoutCompat>
