<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F7F3"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_back"
            app:tint="#2E6D66" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activities"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="#2E6D66"/>
    </LinearLayout>


    <GridLayout
        android:id="@+id/gridActivities"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rowCount="5"
        android:columnCount="3"
        android:alignmentMode="alignMargins"
        android:padding="12dp"
        android:useDefaultMargins="true"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >


        <LinearLayout
            android:id="@+id/itemSwimming"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:background="@drawable/activity_unselected"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/swim"
                app:tint="#2E6D66" />

            <TextView android:text="@string/swimming"
                android:textColor="#2E6D66"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/itemSnowSport"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:background="@drawable/activity_unselected"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView android:layout_width="32dp" android:layout_height="32dp"
                android:src="@drawable/snow_sport"
                app:tint="#2E6D66"/>

            <TextView android:text="@string/snow_sports"
                android:textColor="#2E6D66"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/itemWork"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:background="@drawable/activity_unselected"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView android:layout_width="32dp" android:layout_height="32dp"
                android:src="@drawable/work"
                app:tint="#2E6D66"/>

            <TextView android:text="@string/working"
                android:textColor="#2E6D66"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/itemCamping"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:background="@drawable/activity_unselected"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/camping"
                app:tint="#2E6D66"/>

            <TextView android:text="@string/camping"
                android:textColor="#2E6D66"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/itemGym"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:background="@drawable/activity_unselected"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/gym"
                app:tint="#2E6D66"/>

            <TextView android:text="@string/gym"
                android:textColor="#2E6D66"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/itemPhotography"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:background="@drawable/activity_unselected"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/photograpy"
                app:tint="#2E6D66"/>

            <TextView android:text="@string/photography"
                android:textColor="#2E6D66"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/itemInternational"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:background="@drawable/activity_unselected"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/hot_arr_baloon"
                app:tint="#2E6D66"/>

            <TextView android:text="@string/international"
                android:textColor="#2E6D66"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/itemBeach"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:background="@drawable/activity_unselected"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <ImageView android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/beach"
                app:tint="#2E6D66"/>

            <TextView android:text="@string/beach"
                android:textColor="#2E6D66"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/itemBaby"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:background="@drawable/activity_unselected"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/baby"
                app:tint="#2E6D66"/>

            <TextView android:text="@string/baby"
                android:textColor="#2E6D66"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/itemHiking"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:background="@drawable/activity_unselected"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/hiking"
                app:tint="#2E6D66"/>

            <TextView android:text="@string/hiking"
                android:textColor="#2E6D66"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/itemBicycle"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:background="@drawable/activity_unselected"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/bicycle"
                app:tint="#2E6D66"/>

            <TextView android:text="@string/bicycling"
                android:textColor="#2E6D66"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/itemRunning"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:background="@drawable/activity_unselected"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/running"
                app:tint="#2E6D66"/>

            <TextView android:text="@string/running"
                android:textColor="#2E6D66"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/itemDinner"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:background="@drawable/activity_unselected"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/dinner"
                app:tint="#2E6D66"/>

            <TextView android:text="@string/fancy_dinner"
                android:textColor="#2E6D66"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/itemMotorcycle"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:background="@drawable/activity_unselected"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/motorcycle"
                app:tint="#2E6D66"/>

            <TextView android:text="@string/motorcycle"
                android:textColor="#2E6D66"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
